# iot-foundry-pldm-agent

./: .gitignore  .gitmodules  BUILD-SYSTEM.md  BUILD.md  CMakeLists.txt  CONFIG.md  IOT1-OBJECTS.md  IOT2_requirements_evaluation.md  LICENSE  MAPPING_PLDM_TO_REDFISH.md  PICMG_IOT2_REQUIREMENTS.md  README.md  TRANSPORT.md  config.json  config.schema.json  how_to.md  setup-deps.sh  validator-report.txt
.github/: copilot-instructions.md
dashboard/: .env.example  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  config.ts  index.css
dashboard/src/components/: JsonPanel.tsx  NavShell.tsx  ResourceTable.tsx  StatusPill.tsx  SupportedActions.tsx
dashboard/src/pages/: AuthPage.tsx  AutomationPage.tsx  ChassisPage.tsx  ExplorerPage.tsx  JobsPage.tsx
dashboard/src/services/: redfishClient.test.ts  redfishClient.ts
dashboard/src/state/: ClientContext.tsx
dashboard/src/types/: redfish.ts
dashboard/src/utils/: redfish.test.ts  redfish.ts
demo/: README.md  requirements.txt  setup.sh  start.sh
demo/configs/: demo.ini
demo/parts/: __init__.py  configurator.py  redfish_server.py  runtime_agent.py  shared.py
demo/pldm_tools/: clean_mockup.py  collect_endpoints.py  export_pdrs_to_json.py  generate_sensors.py  probe_fru.py  utils.py
demo/pldm_tools/pldm_mapping_wizard/: __init__.py  cli.py  serial_transport.py
demo/pldm_tools/pldm_mapping_wizard/discovery/: __init__.py  pdr_parser.py  pdr_retriever.py
demo/pldm_tools/pldm_mapping_wizard/mapping/: __init__.py
include/iot1/config/: fru_record.h
include/iot1/controller/: controller.h
include/iot1/effecter/: effecter.h
include/iot1/endpoint/: endpoint.h
include/iot1/pdr/: pdr.h
include/iot1/protocol/: pldm_transport.h
include/iot1/sensor/: sensor.h
samples/mockup/redfish/v1/: index.json
samples/mockup/redfish/v1/$metadata/: index.xml
samples/mockup/redfish/v1/AccountService/: index.json
samples/mockup/redfish/v1/AccountService/Roles/: index.json
samples/mockup/redfish/v1/AutomationNodes/: index.json
samples/mockup/redfish/v1/AutomationNodes/Sensor1/: index.json
samples/mockup/redfish/v1/AutomationNodes/Thermostat/: index.json
samples/mockup/redfish/v1/AutomationNodes/XAxisMover/: index.json
samples/mockup/redfish/v1/AutomationNodes/YAxisMover/: index.json
samples/mockup/redfish/v1/AutomationNodes/ZAxisMover/: index.json
samples/mockup/redfish/v1/Cables/: index.json
samples/mockup/redfish/v1/Cables/ComPower1/: index.json
samples/mockup/redfish/v1/Cables/ComPower2/: index.json
samples/mockup/redfish/v1/Cables/ComPower3/: index.json
samples/mockup/redfish/v1/Cables/ComPower4/: index.json
samples/mockup/redfish/v1/Cables/ComPower5/: index.json
samples/mockup/redfish/v1/Cables/MainPower/: index.json
samples/mockup/redfish/v1/Chassis/: index.json
samples/mockup/redfish/v1/EventService/: index.json
samples/mockup/redfish/v1/JobService/: index.json
samples/mockup/redfish/v1/Managers/: index.json
samples/mockup/redfish/v1/SessionService/: index.json
samples/mockup/redfish/v1/Systems/: index.json
samples/mockup/redfish/v1/TaskService/: index.json
samples/mockup/redfish/v1/odata/: index.json
src/: main.cpp
src/iot1/: controller.cpp  effecter.cpp  endpoint.cpp  fru_record.cpp  pdr.cpp  pldm_transport.cpp  sensor.cpp
systemd/: pldm-agent.service.in
tools/: run_demo.sh
tools/pldm-mapping-wizard/: .gitignore  DEVELOPMENT.md  IOT2_mockup_analysis.md  IOT2_requirements_evaluation.md  QUICKSTART.md  README.md  analyze_handle2.py  check_pdr_format.py  clean_mockup.py  compare_pdrs.py  debug_handle2.py  debug_multipart.py  debug_pdr_bytes.py  debug_pdr_retrieval.py  decode_all_pdrs.py  decoded_pdrs_full.txt  diagnose_pdr_response.py  entity_types_dsp0249.py  generate_automation_node.py  generate_chassis.py  generate_controls.py  list_all_handles.py  parse_expected_pdrs.py  parse_pdrs.py  pdr_analysis.py  pdr_and_fru_records_endpoints.json  pdr_units_to_ucum.py  pldm-mapping-wizard.py  pyproject.toml  read_pdr_info.py  requirements.txt  show_handle2_raw.py  show_pdr_info_frame.py  show_request_packet.py  test_all_pdrs.py  test_device.py  test_pdr_parser.py  test_serial.py  tests.py  trace_device.py  (+2 more)
tools/pldm-mapping-wizard/pldm_mapping_wizard/: cli.py  serial_transport.py  utils.py
tools/pldm-mapping-wizard/pldm_mapping_wizard/discovery/: fru_reader.py  pldm_commands.py
tools/pldm-mapping-wizard/pldm_mapping_wizard/mapping/: interactive.py  suggestions.py  transforms.py  validators.py
tools/pldm-mapping-wizard/pldm_mapping_wizard/redfish/: __init__.py
(+146 files in other folders)
